add frontend & service layer implementation